// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.toBeByteSize() {pass: false} expect(actual = 0).toBeByteSize(expected = 1) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 B</>
Received: <red>0 B</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 0).toBeByteSize(expected = 1n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 B</>
Received: <red>0 B</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 0).toBeByteSize(expected = 1024) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 KiB (1024 B)</>
Received: <red>0 B</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 0).toBeByteSize(expected = 1024n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 KiB (1024 B)</>
Received: <red>0 B</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 0).toBeByteSize(expected = 1048576) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 MiB (1048576 B)</>
Received: <red>0 B</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 0).toBeByteSize(expected = 1048576n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 MiB (1048576 B)</>
Received: <red>0 B</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 0).toBeByteSize(expected = 1073741824) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 GiB (1073741824 B)</>
Received: <red>0 B</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 0).toBeByteSize(expected = 1073741824n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 GiB (1073741824 B)</>
Received: <red>0 B</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 0).toBeByteSize(expected = 1099511627776) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 TiB (1099511627776 B)</>
Received: <red>0 B</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 0).toBeByteSize(expected = 1099511627776n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 TiB (1099511627776 B)</>
Received: <red>0 B</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 0).toBeByteSize(expected = 1125899906842624) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 PiB (1125899906842624 B)</>
Received: <red>0 B</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 0).toBeByteSize(expected = 1125899906842624n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 PiB (1125899906842624 B)</>
Received: <red>0 B</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 0n).toBeByteSize(expected = 1) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 B</>
Received: <red>0 B</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 0n).toBeByteSize(expected = 1n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 B</>
Received: <red>0 B</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 0n).toBeByteSize(expected = 1024) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 KiB (1024 B)</>
Received: <red>0 B</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 0n).toBeByteSize(expected = 1024n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 KiB (1024 B)</>
Received: <red>0 B</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 0n).toBeByteSize(expected = 1048576) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 MiB (1048576 B)</>
Received: <red>0 B</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 0n).toBeByteSize(expected = 1048576n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 MiB (1048576 B)</>
Received: <red>0 B</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 0n).toBeByteSize(expected = 1073741824) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 GiB (1073741824 B)</>
Received: <red>0 B</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 0n).toBeByteSize(expected = 1073741824n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 GiB (1073741824 B)</>
Received: <red>0 B</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 0n).toBeByteSize(expected = 1099511627776) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 TiB (1099511627776 B)</>
Received: <red>0 B</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 0n).toBeByteSize(expected = 1099511627776n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 TiB (1099511627776 B)</>
Received: <red>0 B</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 0n).toBeByteSize(expected = 1125899906842624) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 PiB (1125899906842624 B)</>
Received: <red>0 B</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 0n).toBeByteSize(expected = 1125899906842624n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 PiB (1125899906842624 B)</>
Received: <red>0 B</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1).toBeByteSize(expected = 0) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>0 B</>
Received: <red>1 B</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1).toBeByteSize(expected = 0n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>0 B</>
Received: <red>1 B</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1).toBeByteSize(expected = 1024) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 KiB (1024 B)</>
Received: <red>1 B</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1).toBeByteSize(expected = 1024n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 KiB (1024 B)</>
Received: <red>1 B</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1).toBeByteSize(expected = 1048576) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 MiB (1048576 B)</>
Received: <red>1 B</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1).toBeByteSize(expected = 1048576n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 MiB (1048576 B)</>
Received: <red>1 B</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1).toBeByteSize(expected = 1073741824) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 GiB (1073741824 B)</>
Received: <red>1 B</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1).toBeByteSize(expected = 1073741824n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 GiB (1073741824 B)</>
Received: <red>1 B</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1).toBeByteSize(expected = 1099511627776) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 TiB (1099511627776 B)</>
Received: <red>1 B</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1).toBeByteSize(expected = 1099511627776n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 TiB (1099511627776 B)</>
Received: <red>1 B</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1).toBeByteSize(expected = 1125899906842624) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 PiB (1125899906842624 B)</>
Received: <red>1 B</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1).toBeByteSize(expected = 1125899906842624n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 PiB (1125899906842624 B)</>
Received: <red>1 B</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1n).toBeByteSize(expected = 0) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>0 B</>
Received: <red>1 B</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1n).toBeByteSize(expected = 0n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>0 B</>
Received: <red>1 B</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1n).toBeByteSize(expected = 1024) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 KiB (1024 B)</>
Received: <red>1 B</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1n).toBeByteSize(expected = 1024n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 KiB (1024 B)</>
Received: <red>1 B</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1n).toBeByteSize(expected = 1048576) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 MiB (1048576 B)</>
Received: <red>1 B</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1n).toBeByteSize(expected = 1048576n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 MiB (1048576 B)</>
Received: <red>1 B</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1n).toBeByteSize(expected = 1073741824) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 GiB (1073741824 B)</>
Received: <red>1 B</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1n).toBeByteSize(expected = 1073741824n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 GiB (1073741824 B)</>
Received: <red>1 B</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1n).toBeByteSize(expected = 1099511627776) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 TiB (1099511627776 B)</>
Received: <red>1 B</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1n).toBeByteSize(expected = 1099511627776n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 TiB (1099511627776 B)</>
Received: <red>1 B</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1n).toBeByteSize(expected = 1125899906842624) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 PiB (1125899906842624 B)</>
Received: <red>1 B</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1n).toBeByteSize(expected = 1125899906842624n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 PiB (1125899906842624 B)</>
Received: <red>1 B</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1024).toBeByteSize(expected = 0) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>0 B</>
Received: <red>1 KiB (1024 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1024).toBeByteSize(expected = 0n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>0 B</>
Received: <red>1 KiB (1024 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1024).toBeByteSize(expected = 1) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 B</>
Received: <red>1 KiB (1024 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1024).toBeByteSize(expected = 1n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 B</>
Received: <red>1 KiB (1024 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1024).toBeByteSize(expected = 1048576) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 MiB (1048576 B)</>
Received: <red>1 KiB (1024 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1024).toBeByteSize(expected = 1048576n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 MiB (1048576 B)</>
Received: <red>1 KiB (1024 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1024).toBeByteSize(expected = 1073741824) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 GiB (1073741824 B)</>
Received: <red>1 KiB (1024 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1024).toBeByteSize(expected = 1073741824n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 GiB (1073741824 B)</>
Received: <red>1 KiB (1024 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1024).toBeByteSize(expected = 1099511627776) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 TiB (1099511627776 B)</>
Received: <red>1 KiB (1024 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1024).toBeByteSize(expected = 1099511627776n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 TiB (1099511627776 B)</>
Received: <red>1 KiB (1024 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1024).toBeByteSize(expected = 1125899906842624) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 PiB (1125899906842624 B)</>
Received: <red>1 KiB (1024 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1024).toBeByteSize(expected = 1125899906842624n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 PiB (1125899906842624 B)</>
Received: <red>1 KiB (1024 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1024n).toBeByteSize(expected = 0) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>0 B</>
Received: <red>1 KiB (1024 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1024n).toBeByteSize(expected = 0n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>0 B</>
Received: <red>1 KiB (1024 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1024n).toBeByteSize(expected = 1) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 B</>
Received: <red>1 KiB (1024 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1024n).toBeByteSize(expected = 1n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 B</>
Received: <red>1 KiB (1024 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1024n).toBeByteSize(expected = 1048576) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 MiB (1048576 B)</>
Received: <red>1 KiB (1024 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1024n).toBeByteSize(expected = 1048576n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 MiB (1048576 B)</>
Received: <red>1 KiB (1024 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1024n).toBeByteSize(expected = 1073741824) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 GiB (1073741824 B)</>
Received: <red>1 KiB (1024 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1024n).toBeByteSize(expected = 1073741824n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 GiB (1073741824 B)</>
Received: <red>1 KiB (1024 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1024n).toBeByteSize(expected = 1099511627776) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 TiB (1099511627776 B)</>
Received: <red>1 KiB (1024 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1024n).toBeByteSize(expected = 1099511627776n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 TiB (1099511627776 B)</>
Received: <red>1 KiB (1024 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1024n).toBeByteSize(expected = 1125899906842624) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 PiB (1125899906842624 B)</>
Received: <red>1 KiB (1024 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1024n).toBeByteSize(expected = 1125899906842624n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 PiB (1125899906842624 B)</>
Received: <red>1 KiB (1024 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1048576).toBeByteSize(expected = 0) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>0 B</>
Received: <red>1 MiB (1048576 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1048576).toBeByteSize(expected = 0n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>0 B</>
Received: <red>1 MiB (1048576 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1048576).toBeByteSize(expected = 1) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 B</>
Received: <red>1 MiB (1048576 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1048576).toBeByteSize(expected = 1n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 B</>
Received: <red>1 MiB (1048576 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1048576).toBeByteSize(expected = 1024) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 KiB (1024 B)</>
Received: <red>1 MiB (1048576 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1048576).toBeByteSize(expected = 1024n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 KiB (1024 B)</>
Received: <red>1 MiB (1048576 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1048576).toBeByteSize(expected = 1073741824) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 GiB (1073741824 B)</>
Received: <red>1 MiB (1048576 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1048576).toBeByteSize(expected = 1073741824n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 GiB (1073741824 B)</>
Received: <red>1 MiB (1048576 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1048576).toBeByteSize(expected = 1099511627776) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 TiB (1099511627776 B)</>
Received: <red>1 MiB (1048576 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1048576).toBeByteSize(expected = 1099511627776n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 TiB (1099511627776 B)</>
Received: <red>1 MiB (1048576 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1048576).toBeByteSize(expected = 1125899906842624) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 PiB (1125899906842624 B)</>
Received: <red>1 MiB (1048576 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1048576).toBeByteSize(expected = 1125899906842624n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 PiB (1125899906842624 B)</>
Received: <red>1 MiB (1048576 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1048576n).toBeByteSize(expected = 0) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>0 B</>
Received: <red>1 MiB (1048576 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1048576n).toBeByteSize(expected = 0n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>0 B</>
Received: <red>1 MiB (1048576 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1048576n).toBeByteSize(expected = 1) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 B</>
Received: <red>1 MiB (1048576 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1048576n).toBeByteSize(expected = 1n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 B</>
Received: <red>1 MiB (1048576 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1048576n).toBeByteSize(expected = 1024) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 KiB (1024 B)</>
Received: <red>1 MiB (1048576 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1048576n).toBeByteSize(expected = 1024n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 KiB (1024 B)</>
Received: <red>1 MiB (1048576 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1048576n).toBeByteSize(expected = 1073741824) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 GiB (1073741824 B)</>
Received: <red>1 MiB (1048576 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1048576n).toBeByteSize(expected = 1073741824n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 GiB (1073741824 B)</>
Received: <red>1 MiB (1048576 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1048576n).toBeByteSize(expected = 1099511627776) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 TiB (1099511627776 B)</>
Received: <red>1 MiB (1048576 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1048576n).toBeByteSize(expected = 1099511627776n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 TiB (1099511627776 B)</>
Received: <red>1 MiB (1048576 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1048576n).toBeByteSize(expected = 1125899906842624) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 PiB (1125899906842624 B)</>
Received: <red>1 MiB (1048576 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1048576n).toBeByteSize(expected = 1125899906842624n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 PiB (1125899906842624 B)</>
Received: <red>1 MiB (1048576 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1073741824).toBeByteSize(expected = 0) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>0 B</>
Received: <red>1 GiB (1073741824 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1073741824).toBeByteSize(expected = 0n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>0 B</>
Received: <red>1 GiB (1073741824 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1073741824).toBeByteSize(expected = 1) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 B</>
Received: <red>1 GiB (1073741824 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1073741824).toBeByteSize(expected = 1n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 B</>
Received: <red>1 GiB (1073741824 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1073741824).toBeByteSize(expected = 1024) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 KiB (1024 B)</>
Received: <red>1 GiB (1073741824 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1073741824).toBeByteSize(expected = 1024n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 KiB (1024 B)</>
Received: <red>1 GiB (1073741824 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1073741824).toBeByteSize(expected = 1048576) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 MiB (1048576 B)</>
Received: <red>1 GiB (1073741824 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1073741824).toBeByteSize(expected = 1048576n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 MiB (1048576 B)</>
Received: <red>1 GiB (1073741824 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1073741824).toBeByteSize(expected = 1099511627776) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 TiB (1099511627776 B)</>
Received: <red>1 GiB (1073741824 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1073741824).toBeByteSize(expected = 1099511627776n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 TiB (1099511627776 B)</>
Received: <red>1 GiB (1073741824 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1073741824).toBeByteSize(expected = 1125899906842624) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 PiB (1125899906842624 B)</>
Received: <red>1 GiB (1073741824 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1073741824).toBeByteSize(expected = 1125899906842624n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 PiB (1125899906842624 B)</>
Received: <red>1 GiB (1073741824 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1073741824n).toBeByteSize(expected = 0) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>0 B</>
Received: <red>1 GiB (1073741824 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1073741824n).toBeByteSize(expected = 0n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>0 B</>
Received: <red>1 GiB (1073741824 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1073741824n).toBeByteSize(expected = 1) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 B</>
Received: <red>1 GiB (1073741824 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1073741824n).toBeByteSize(expected = 1n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 B</>
Received: <red>1 GiB (1073741824 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1073741824n).toBeByteSize(expected = 1024) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 KiB (1024 B)</>
Received: <red>1 GiB (1073741824 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1073741824n).toBeByteSize(expected = 1024n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 KiB (1024 B)</>
Received: <red>1 GiB (1073741824 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1073741824n).toBeByteSize(expected = 1048576) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 MiB (1048576 B)</>
Received: <red>1 GiB (1073741824 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1073741824n).toBeByteSize(expected = 1048576n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 MiB (1048576 B)</>
Received: <red>1 GiB (1073741824 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1073741824n).toBeByteSize(expected = 1099511627776) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 TiB (1099511627776 B)</>
Received: <red>1 GiB (1073741824 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1073741824n).toBeByteSize(expected = 1099511627776n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 TiB (1099511627776 B)</>
Received: <red>1 GiB (1073741824 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1073741824n).toBeByteSize(expected = 1125899906842624) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 PiB (1125899906842624 B)</>
Received: <red>1 GiB (1073741824 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1073741824n).toBeByteSize(expected = 1125899906842624n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 PiB (1125899906842624 B)</>
Received: <red>1 GiB (1073741824 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1099511627776).toBeByteSize(expected = 0) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>0 B</>
Received: <red>1 TiB (1099511627776 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1099511627776).toBeByteSize(expected = 0n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>0 B</>
Received: <red>1 TiB (1099511627776 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1099511627776).toBeByteSize(expected = 1) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 B</>
Received: <red>1 TiB (1099511627776 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1099511627776).toBeByteSize(expected = 1n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 B</>
Received: <red>1 TiB (1099511627776 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1099511627776).toBeByteSize(expected = 1024) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 KiB (1024 B)</>
Received: <red>1 TiB (1099511627776 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1099511627776).toBeByteSize(expected = 1024n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 KiB (1024 B)</>
Received: <red>1 TiB (1099511627776 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1099511627776).toBeByteSize(expected = 1048576) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 MiB (1048576 B)</>
Received: <red>1 TiB (1099511627776 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1099511627776).toBeByteSize(expected = 1048576n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 MiB (1048576 B)</>
Received: <red>1 TiB (1099511627776 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1099511627776).toBeByteSize(expected = 1073741824) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 GiB (1073741824 B)</>
Received: <red>1 TiB (1099511627776 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1099511627776).toBeByteSize(expected = 1073741824n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 GiB (1073741824 B)</>
Received: <red>1 TiB (1099511627776 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1099511627776).toBeByteSize(expected = 1125899906842624) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 PiB (1125899906842624 B)</>
Received: <red>1 TiB (1099511627776 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1099511627776).toBeByteSize(expected = 1125899906842624n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 PiB (1125899906842624 B)</>
Received: <red>1 TiB (1099511627776 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1099511627776n).toBeByteSize(expected = 0) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>0 B</>
Received: <red>1 TiB (1099511627776 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1099511627776n).toBeByteSize(expected = 0n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>0 B</>
Received: <red>1 TiB (1099511627776 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1099511627776n).toBeByteSize(expected = 1) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 B</>
Received: <red>1 TiB (1099511627776 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1099511627776n).toBeByteSize(expected = 1n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 B</>
Received: <red>1 TiB (1099511627776 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1099511627776n).toBeByteSize(expected = 1024) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 KiB (1024 B)</>
Received: <red>1 TiB (1099511627776 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1099511627776n).toBeByteSize(expected = 1024n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 KiB (1024 B)</>
Received: <red>1 TiB (1099511627776 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1099511627776n).toBeByteSize(expected = 1048576) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 MiB (1048576 B)</>
Received: <red>1 TiB (1099511627776 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1099511627776n).toBeByteSize(expected = 1048576n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 MiB (1048576 B)</>
Received: <red>1 TiB (1099511627776 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1099511627776n).toBeByteSize(expected = 1073741824) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 GiB (1073741824 B)</>
Received: <red>1 TiB (1099511627776 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1099511627776n).toBeByteSize(expected = 1073741824n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 GiB (1073741824 B)</>
Received: <red>1 TiB (1099511627776 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1099511627776n).toBeByteSize(expected = 1125899906842624) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 PiB (1125899906842624 B)</>
Received: <red>1 TiB (1099511627776 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1099511627776n).toBeByteSize(expected = 1125899906842624n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 PiB (1125899906842624 B)</>
Received: <red>1 TiB (1099511627776 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1125899906842624).toBeByteSize(expected = 0) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>0 B</>
Received: <red>1 PiB (1125899906842624 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1125899906842624).toBeByteSize(expected = 0n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>0 B</>
Received: <red>1 PiB (1125899906842624 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1125899906842624).toBeByteSize(expected = 1) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 B</>
Received: <red>1 PiB (1125899906842624 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1125899906842624).toBeByteSize(expected = 1n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 B</>
Received: <red>1 PiB (1125899906842624 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1125899906842624).toBeByteSize(expected = 1024) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 KiB (1024 B)</>
Received: <red>1 PiB (1125899906842624 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1125899906842624).toBeByteSize(expected = 1024n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 KiB (1024 B)</>
Received: <red>1 PiB (1125899906842624 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1125899906842624).toBeByteSize(expected = 1048576) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 MiB (1048576 B)</>
Received: <red>1 PiB (1125899906842624 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1125899906842624).toBeByteSize(expected = 1048576n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 MiB (1048576 B)</>
Received: <red>1 PiB (1125899906842624 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1125899906842624).toBeByteSize(expected = 1073741824) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 GiB (1073741824 B)</>
Received: <red>1 PiB (1125899906842624 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1125899906842624).toBeByteSize(expected = 1073741824n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 GiB (1073741824 B)</>
Received: <red>1 PiB (1125899906842624 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1125899906842624).toBeByteSize(expected = 1099511627776) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 TiB (1099511627776 B)</>
Received: <red>1 PiB (1125899906842624 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1125899906842624).toBeByteSize(expected = 1099511627776n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 TiB (1099511627776 B)</>
Received: <red>1 PiB (1125899906842624 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1125899906842624n).toBeByteSize(expected = 0) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>0 B</>
Received: <red>1 PiB (1125899906842624 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1125899906842624n).toBeByteSize(expected = 0n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>0 B</>
Received: <red>1 PiB (1125899906842624 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1125899906842624n).toBeByteSize(expected = 1) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 B</>
Received: <red>1 PiB (1125899906842624 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1125899906842624n).toBeByteSize(expected = 1n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 B</>
Received: <red>1 PiB (1125899906842624 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1125899906842624n).toBeByteSize(expected = 1024) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 KiB (1024 B)</>
Received: <red>1 PiB (1125899906842624 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1125899906842624n).toBeByteSize(expected = 1024n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 KiB (1024 B)</>
Received: <red>1 PiB (1125899906842624 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1125899906842624n).toBeByteSize(expected = 1048576) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 MiB (1048576 B)</>
Received: <red>1 PiB (1125899906842624 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1125899906842624n).toBeByteSize(expected = 1048576n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 MiB (1048576 B)</>
Received: <red>1 PiB (1125899906842624 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1125899906842624n).toBeByteSize(expected = 1073741824) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 GiB (1073741824 B)</>
Received: <red>1 PiB (1125899906842624 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1125899906842624n).toBeByteSize(expected = 1073741824n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 GiB (1073741824 B)</>
Received: <red>1 PiB (1125899906842624 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1125899906842624n).toBeByteSize(expected = 1099511627776) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 TiB (1099511627776 B)</>
Received: <red>1 PiB (1125899906842624 B)</>"
`;

exports[`.toBeByteSize() {pass: false} expect(actual = 1125899906842624n).toBeByteSize(expected = 1099511627776n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: <green>1 TiB (1099511627776 B)</>
Received: <red>1 PiB (1125899906842624 B)</>"
`;

exports[`.toBeByteSize() {pass: true} expect(actual = 0).not.toBeByteSize(expected = 0) 1`] = `
"<dim>expect(</><red>received</><dim>).</>not<dim>.</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: not <green>0 B</>
Received:     <red>0 B</>"
`;

exports[`.toBeByteSize() {pass: true} expect(actual = 0).not.toBeByteSize(expected = 0n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>not<dim>.</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: not <green>0 B</>
Received:     <red>0 B</>"
`;

exports[`.toBeByteSize() {pass: true} expect(actual = 0n).not.toBeByteSize(expected = 0) 1`] = `
"<dim>expect(</><red>received</><dim>).</>not<dim>.</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: not <green>0 B</>
Received:     <red>0 B</>"
`;

exports[`.toBeByteSize() {pass: true} expect(actual = 0n).not.toBeByteSize(expected = 0n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>not<dim>.</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: not <green>0 B</>
Received:     <red>0 B</>"
`;

exports[`.toBeByteSize() {pass: true} expect(actual = 1).not.toBeByteSize(expected = 1) 1`] = `
"<dim>expect(</><red>received</><dim>).</>not<dim>.</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: not <green>1 B</>
Received:     <red>1 B</>"
`;

exports[`.toBeByteSize() {pass: true} expect(actual = 1).not.toBeByteSize(expected = 1n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>not<dim>.</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: not <green>1 B</>
Received:     <red>1 B</>"
`;

exports[`.toBeByteSize() {pass: true} expect(actual = 1n).not.toBeByteSize(expected = 1) 1`] = `
"<dim>expect(</><red>received</><dim>).</>not<dim>.</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: not <green>1 B</>
Received:     <red>1 B</>"
`;

exports[`.toBeByteSize() {pass: true} expect(actual = 1n).not.toBeByteSize(expected = 1n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>not<dim>.</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: not <green>1 B</>
Received:     <red>1 B</>"
`;

exports[`.toBeByteSize() {pass: true} expect(actual = 1024).not.toBeByteSize(expected = 1024) 1`] = `
"<dim>expect(</><red>received</><dim>).</>not<dim>.</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: not <green>1 KiB (1024 B)</>
Received:     <red>1 KiB (1024 B)</>"
`;

exports[`.toBeByteSize() {pass: true} expect(actual = 1024).not.toBeByteSize(expected = 1024n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>not<dim>.</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: not <green>1 KiB (1024 B)</>
Received:     <red>1 KiB (1024 B)</>"
`;

exports[`.toBeByteSize() {pass: true} expect(actual = 1024n).not.toBeByteSize(expected = 1024) 1`] = `
"<dim>expect(</><red>received</><dim>).</>not<dim>.</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: not <green>1 KiB (1024 B)</>
Received:     <red>1 KiB (1024 B)</>"
`;

exports[`.toBeByteSize() {pass: true} expect(actual = 1024n).not.toBeByteSize(expected = 1024n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>not<dim>.</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: not <green>1 KiB (1024 B)</>
Received:     <red>1 KiB (1024 B)</>"
`;

exports[`.toBeByteSize() {pass: true} expect(actual = 1048576).not.toBeByteSize(expected = 1048576) 1`] = `
"<dim>expect(</><red>received</><dim>).</>not<dim>.</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: not <green>1 MiB (1048576 B)</>
Received:     <red>1 MiB (1048576 B)</>"
`;

exports[`.toBeByteSize() {pass: true} expect(actual = 1048576).not.toBeByteSize(expected = 1048576n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>not<dim>.</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: not <green>1 MiB (1048576 B)</>
Received:     <red>1 MiB (1048576 B)</>"
`;

exports[`.toBeByteSize() {pass: true} expect(actual = 1048576n).not.toBeByteSize(expected = 1048576) 1`] = `
"<dim>expect(</><red>received</><dim>).</>not<dim>.</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: not <green>1 MiB (1048576 B)</>
Received:     <red>1 MiB (1048576 B)</>"
`;

exports[`.toBeByteSize() {pass: true} expect(actual = 1048576n).not.toBeByteSize(expected = 1048576n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>not<dim>.</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: not <green>1 MiB (1048576 B)</>
Received:     <red>1 MiB (1048576 B)</>"
`;

exports[`.toBeByteSize() {pass: true} expect(actual = 1073741824).not.toBeByteSize(expected = 1073741824) 1`] = `
"<dim>expect(</><red>received</><dim>).</>not<dim>.</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: not <green>1 GiB (1073741824 B)</>
Received:     <red>1 GiB (1073741824 B)</>"
`;

exports[`.toBeByteSize() {pass: true} expect(actual = 1073741824).not.toBeByteSize(expected = 1073741824n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>not<dim>.</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: not <green>1 GiB (1073741824 B)</>
Received:     <red>1 GiB (1073741824 B)</>"
`;

exports[`.toBeByteSize() {pass: true} expect(actual = 1073741824n).not.toBeByteSize(expected = 1073741824) 1`] = `
"<dim>expect(</><red>received</><dim>).</>not<dim>.</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: not <green>1 GiB (1073741824 B)</>
Received:     <red>1 GiB (1073741824 B)</>"
`;

exports[`.toBeByteSize() {pass: true} expect(actual = 1073741824n).not.toBeByteSize(expected = 1073741824n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>not<dim>.</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: not <green>1 GiB (1073741824 B)</>
Received:     <red>1 GiB (1073741824 B)</>"
`;

exports[`.toBeByteSize() {pass: true} expect(actual = 1099511627776).not.toBeByteSize(expected = 1099511627776) 1`] = `
"<dim>expect(</><red>received</><dim>).</>not<dim>.</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: not <green>1 TiB (1099511627776 B)</>
Received:     <red>1 TiB (1099511627776 B)</>"
`;

exports[`.toBeByteSize() {pass: true} expect(actual = 1099511627776).not.toBeByteSize(expected = 1099511627776n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>not<dim>.</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: not <green>1 TiB (1099511627776 B)</>
Received:     <red>1 TiB (1099511627776 B)</>"
`;

exports[`.toBeByteSize() {pass: true} expect(actual = 1099511627776n).not.toBeByteSize(expected = 1099511627776) 1`] = `
"<dim>expect(</><red>received</><dim>).</>not<dim>.</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: not <green>1 TiB (1099511627776 B)</>
Received:     <red>1 TiB (1099511627776 B)</>"
`;

exports[`.toBeByteSize() {pass: true} expect(actual = 1099511627776n).not.toBeByteSize(expected = 1099511627776n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>not<dim>.</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: not <green>1 TiB (1099511627776 B)</>
Received:     <red>1 TiB (1099511627776 B)</>"
`;

exports[`.toBeByteSize() {pass: true} expect(actual = 1125899906842624).not.toBeByteSize(expected = 1125899906842624) 1`] = `
"<dim>expect(</><red>received</><dim>).</>not<dim>.</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: not <green>1 PiB (1125899906842624 B)</>
Received:     <red>1 PiB (1125899906842624 B)</>"
`;

exports[`.toBeByteSize() {pass: true} expect(actual = 1125899906842624).not.toBeByteSize(expected = 1125899906842624n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>not<dim>.</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: not <green>1 PiB (1125899906842624 B)</>
Received:     <red>1 PiB (1125899906842624 B)</>"
`;

exports[`.toBeByteSize() {pass: true} expect(actual = 1125899906842624n).not.toBeByteSize(expected = 1125899906842624) 1`] = `
"<dim>expect(</><red>received</><dim>).</>not<dim>.</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: not <green>1 PiB (1125899906842624 B)</>
Received:     <red>1 PiB (1125899906842624 B)</>"
`;

exports[`.toBeByteSize() {pass: true} expect(actual = 1125899906842624n).not.toBeByteSize(expected = 1125899906842624n) 1`] = `
"<dim>expect(</><red>received</><dim>).</>not<dim>.</>toBeByteSize<dim>(</><green>expected</><dim>)</>

Expected: not <green>1 PiB (1125899906842624 B)</>
Received:     <red>1 PiB (1125899906842624 B)</>"
`;
